Read from Live Google Sheet (#1)
* Reorganize classes

* Retrieve data from live google sheet

* Some clean-up

* [WIP] integrate keycloak

* Use a service account to access the spreadsheet

* Cleanup

* Cleanup